# MacintoshCraft

./: CMakeLists.txt  README.md
include/: globals.h  mac68k_console.h  mac68k_net.h  packets.h  procedures.h  serialize.h  tools.h  worldgen.h
src/: globals.c  mac68k_console.c  mac68k_net.c  main.c  packets.c  procedures.c  serialize.c  tools.c  varnum.c  worldgen.c
tests/: Makefile  bench_worldgen.c  test_binary_search.c  test_chunk_cache.c  test_worldgen.c
